Fix docs links when announcement banner is visible.

--- a/src/app/(website)/docs/Header.module.css
+++ b/src/app/(website)/docs/Header.module.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   gap: 30px;
-  margin: 20px 0;
+  margin: 40px 0 20px;
   height: 40px;
   max-width: 100vw;
   border-bottom: 2px solid var(--base200);
